tutorials/fr-kubernetes-l-ingress/assets/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /mypath
          backend:
            serviceName: www
            servicePort: 80
