tutorials/fr-kubernetes-l-ingress/assets/routing-by-domain-name.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: by-domain
spec:
  rules:
    - host: www.mywebsite.com
      http:
        paths:
          - backend:
              serviceName: www
              servicePort: 80
